champs selon etape 17/11

--- a/credit_bancaire/views/paiement.xml
+++ b/credit_bancaire/views/paiement.xml
@@ -34,7 +34,8 @@
                 <field name="comment"/>
             </field>
             <field name="ref" position="attributes">
-                <attribute name="invisible">partner_type != 'customer' or payment_mode_client not in ['cheque', 'bank_cheque']
+                <attribute name="invisible">partner_type != 'customer' or payment_mode_client not in ['cheque',
+                    'bank_cheque']
                 </attribute>
                 <attribute name="string">Numéro de chèque</attribute>
             </field>
@@ -46,7 +47,8 @@
             </field>
             <xpath expr="//field[@name='partner_id'][2]" position="attributes">
                 <attribute name="required">autre_type not in ['salaire', 'g50', 'provision']</attribute>
-                <attribute name="invisible">partner_type != 'supplier' or autre_type in ['salaire', 'g50', 'provision'] or is_internal_transfer or type_supplier != 'etranger'
+                <attribute name="invisible">partner_type != 'supplier' or autre_type in ['salaire', 'g50', 'provision']
+                    or is_internal_transfer or type_supplier != 'etranger'
                 </attribute>
                 <attribute name="domain">[('partner_type', '=', 'supplier'),('supplier_type', '=', 'etranger')]
                 </attribute>
@@ -256,4 +258,15 @@
                   action="payment_g50_action"/>
     </menuitem>
 
+    <record model="ir.actions.server" id="paiement_template_action_server">
+        <field name="name">Template Excel</field>
+        <field name="model_id" ref="account.model_account_payment"/>
+        <field name="binding_model_id" ref="account.model_account_payment"/>
+        <field name="state">code</field>
+        <field name="binding_view_types">tree,form</field>
+        <field name="code">
+            if records:
+            action = get_template()
+        </field>
+    </record>
 </odoo>
