--- a/credit_bancaire/views/paiement.xml
+++ b/credit_bancaire/views/paiement.xml
@@ -259,12 +259,10 @@
     <record model="ir.actions.server" id="paiement_template_action_server">
         <field name="name">Template Excel</field>
         <field name="model_id" ref="account.model_account_payment"/>
-        <field name="binding_model_id" ref="account.model_account_payment"/>
         <field name="state">code</field>
         <field name="binding_view_types">tree,form</field>
         <field name="code">
-            if records:
-            action = get_template()
+            model.get_template()
         </field>
     </record>
 </odoo>
