champs selon etape 17/11

--- a/purchase_import/views/import_folder_view.xml
+++ b/purchase_import/views/import_folder_view.xml
@@ -69,120 +69,112 @@
                     </h4>
                     <group>
                         <group>
-                            <field name="partner_id" readonly="stage != 1"/>
                             <field name="date_validation" invisible="1"/>
                             <field name="stage" invisible="1"/>
-                            <field name="payment_mode" readonly="stage != 1"/>
-                            <field name="sans_dom"/>
-                            <field name="proformat"/>
-                            <field name="montant_proformat"/>
+                            <field name="journal_id" invisible="1"/>
+                        </group>
+                        <group string="Réception fiche validation">
+                            <field name="num_commande" readonly="stage != 1"/>
+                            <field name="date_reception_validation" readonly="stage != 1"/>
+                            <field name="partner_id" readonly="stage != 1"/>
                             <field name="montant" readonly="stage != 1"/>
-                            <field name="currency_id" readonly="stage != 1"/>
                             <field name="montant_dz" readonly="stage != 1"/>
+                            <field name="currency_id" readonly="stage != 1"/>
                             <field name="designation_marchandise" readonly="stage != 1"/>
                             <field name="tarif" readonly="stage != 1"/>
+                            <field name="payment_mode" readonly="stage != 1"/>
+                            <field name="bank_id" readonly="stage != 1"/>
+                            <field name="incoterm" readonly="stage != 1"/>
+                            <field name="date_reception_attestation" readonly="stage != 1"/>
                             <field name="note" placeholder="Observations" readonly="stage not in [1, 4, 5]"/>
+                            <field name="validation_file" readonly="stage != 1"/>
+                        </group>
+                        <group invisible="stage in [1]" string="Établissement Taxe Dom.">
+                            <field name="date_etab" readonly="stage != 2"/>
+                            <field name="montant_cheque" readonly="stage != 2"/>
+                            <field name="n_cheque" readonly="stage != 2"/>
+                            <field name="date_depot" readonly="stage != 2"/>
+                            <field name="date_reception" readonly="stage != 2"/>
+                            <field name="bank" readonly="stage != 2"/>
+                            <field name="ordre_de" readonly="stage != 2"/>
+                            <field name="taxe_file" readonly="stage != 2"/>
+                        </group>
+                        <group invisible="stage in [1, 2]" string="Domiciliation">
+                            <field name="date_demande_predom" readonly="stage != 3"/>
+                            <field name="date_accord_predom" readonly="stage != 3"/>
+                            <field name="date_depot_pi" readonly="stage != 3"/>
+                            <field name="date_reception_pro_dom" readonly="stage != 3"/>
+                            <field name="reference_dossier_banque" readonly="stage != 3"/>
+                            <field name="date_envoi_draft" readonly="stage != 3"
+                                   invisible="payment_mode not in ['LC_a_vue', 'LC_a_DP']"/>
+                            <field name="date_confirm_draft" readonly="stage != 3"
+                                   invisible="payment_mode not in ['LC_a_vue', 'LC_a_DP']"/>
+                            <field name="date_ouverture_lc" readonly="stage != 3"
+                                   invisible="payment_mode not in ['LC_a_vue', 'LC_a_DP']"/>
+                            <field name="echeance_date_lc" readonly="stage != 3"
+                                   invisible="payment_mode not in ['LC_a_vue', 'LC_a_DP']"/>
+                            <field name="date_reception_swift" readonly="stage != 3"
+                                   invisible="payment_mode not in ['LC_a_vue', 'LC_a_DP']"/>
+                            <field name="provision_id" readonly="stage != 3"/>
+                        </group>
+                        <group invisible="stage in [1, 2, 3]" string="Report Dom.">
+                            <field name="date_reception_pli" readonly="stage != 4"/>
+                            <field name="date_embarquement" readonly="stage != 4"/>
+                            <field name="date_usine" readonly="stage != 4"/>
+                            <field name="date_depot_rep_dom" readonly="stage != 4"
+                                   invisible="stage in [1, 2, 3]"/>
+                            <field name="date_reception_fac_dom" readonly="stage != 4"
+                                   invisible="stage in [1, 2, 3]"/>
+                            <field name="date_remis_import" readonly="stage != 4"
+                                   invisible="stage in [1, 2, 3]"/>
+                        </group>
+                        <group invisible="stage in [1, 2, 3, 4]" string="Paiement fournisseur">
+                            <field name="date_payment" readonly="stage != 5"/>
+                            <field name="date_depot_ordre" readonly="stage != 5"/>
+                            <field name="date_valeur" readonly="stage != 5"/>
+                            <field name="date_reglement" readonly="stage != 5"/>
+                            <field name="date_reception_document" readonly="stage != 5"/>
+                            <field name="n_dossier" readonly="stage != 5"/>
                         </group>
                         <group>
-                            <field name="date" invisible="1"/>
-                            <field name="delai_payment"/>
-                            <field name="date_payment"/>
-                            <field name="date_reception_d10" readonly="stage != 5" invisible="stage in [1, 2, 3, 4]"/>
-                            <field name="attach_d10" readonly="stage != 5" invisible="stage in [1, 2, 3, 4]"/>
                             <field name="payment_id" invisible="payment_id == False"/>
-                            <field name="num_commande" readonly="stage != 1"/>
                             <button name="create_payment" type="object" string="Créer un paiement"
                                     class="btn-primary" invisible="payment_id != False"/>
                         </group>
                     </group>
                     <notebook>
-                        <page string="Détails de Dom. ">
+                        <page string="Détails de Dom. " invisible="1">
                             <group>
                                 <group>
-                                    <field name="bank_id" readonly="stage != 1"/>
-                                    <field name="journal_id" invisible="1"/>
-                                    <field name="incoterm" readonly="stage != 1"/>
+                                    <field name="sans_dom"/>
+                                    <field name="proformat"/>
+                                    <field name="montant_proformat"/>
+                                    <field name="date" invisible="1"/>
+                                    <field name="delai_payment"/>
+                                    <field name="date_payment"/>
+                                    <field name="date_reception_d10" readonly="stage != 5"
+                                           invisible="stage in [1, 2, 3, 4]"/>
+                                    <field name="attach_d10" readonly="stage != 5" invisible="stage in [1, 2, 3, 4]"/>
+                                </group>
+                                <group>
                                     <field name="methode_expedition"/>
                                     <field name="provision_ouverture" invisible="1"/>
                                     <field name="date_limit_embarquement" readonly="stage != 4"
                                            invisible="payment_mode not in ['LC_a_vue', 'LC_a_DP'] or stage in [1, 2, 3]"/>
-
                                     <field name="date_report_dom"/>
-                                    <field name="date_reception_validation" readonly="stage != 1"/>
-                                    <field name="date_reception_attestation" readonly="stage != 1"/>
                                     <field name="date_proforma_dom"/>
                                     <field name="montant_droits_douane"/>
                                     <field name="douane_id"/>
-                                </group>
-                                <group invisible="stage in [1]">
-                                    <field name="provision_id" readonly="stage != 2" invisible="stage in [1]"/>
-                                    <field name="date_etab" readonly="stage != 2" invisible="stage in [1]"/>
-                                    <field name="montant_cheque" readonly="stage != 2" invisible="stage in [1]"/>
-                                    <field name="n_cheque" readonly="stage != 2" invisible="stage in [1]"/>
-                                    <field name="date_depot" readonly="stage != 2" invisible="stage in [1]"/>
-                                    <field name="date_reception" readonly="stage != 2" invisible="stage in [1]"/>
-                                    <field name="bank" readonly="stage != 2" invisible="stage in [1]"/>
-                                    <field name="ordre_de" readonly="stage != 2" invisible="stage in [1]"/>
-                                </group>
-                                <group invisible="stage in [1, 2]">
                                     <field name="deblocage_id" invisible="1"/>
-                                    <field name="provision_id" readonly="stage != 3" invisible="stage in [1, 2]"/>
-                                    <field name="reference_dossier_banque" readonly="stage != 3"
-                                           invisible="stage in [1, 2]"/>
-                                    <field name="date_demande_predom" readonly="stage != 3"
-                                           invisible="stage in [1, 2]"/>
-                                    <field name="date_depot_pi" readonly="stage != 3"
-                                           invisible="stage in [1, 2]"/>
-                                    <field name="date_reception_pro_dom" readonly="stage != 3"
-                                           invisible="stage in [1, 2]"/>
-                                    <field name="date_accord_predom" readonly="stage != 3" invisible="stage in [1, 2]"/>
                                     <field name="montant_debloque_spot_prefin" string="Montant LC"/>
-                                    <field name="date_envoi_draft" readonly="stage != 3"
-                                           invisible="payment_mode not in ['LC_a_vue', 'LC_a_DP'] or stage in [1, 2]"/>
-                                    <field name="date_confirm_draft" readonly="stage != 3"
-                                           invisible="payment_mode not in ['LC_a_vue', 'LC_a_DP'] or stage in [1, 2]"/>
-                                    <field name="date_ouverture_lc" readonly="stage != 3"
-                                           invisible="payment_mode not in ['LC_a_vue', 'LC_a_DP'] or stage in [1, 2]"/>
-                                    <field name="echeance_date_lc" readonly="stage != 3"
-                                           invisible="payment_mode not in ['LC_a_vue', 'LC_a_DP'] or stage in [1, 2]"/>
-                                    <field name="date_reception_swift" readonly="stage != 3"
-                                           invisible="payment_mode not in ['LC_a_vue', 'LC_a_DP'] or stage in [1, 2]"/>
-                                </group>
-                                <group invisible="stage in [1, 2, 3]">
-                                    <field name="date_reception_pli" readonly="stage != 4"
-                                           invisible="stage in [1, 2, 3]"/>
-                                    <field name="date_usine" readonly="stage != 4" invisible="stage in [1, 2, 3]"/>
-                                    <field name="date_embarquement" readonly="stage != 4"
-                                           invisible="stage in [1, 2, 3]"/>
-                                    <field name="date_depot_rep_dom" readonly="stage != 4"
-                                           invisible="stage in [1, 2, 3]"/>
-                                    <field name="date_reception_fac_dom" readonly="stage != 4"
-                                           invisible="stage in [1, 2, 3]"/>
-                                    <field name="date_remis_import" readonly="stage != 4"
-                                           invisible="stage in [1, 2, 3]"/>
-                                </group>
-                                <group invisible="stage in [1, 2, 3, 4]">
-                                    <field name="n_dossier" readonly="stage != 5"
-                                           invisible="stage in [1, 2, 3, 4]"/>
-                                    <field name="date_valeur" readonly="stage != 5"
-                                           invisible="stage in [1, 2, 3, 4]"/>
-                                    <field name="date_reglement" readonly="stage != 5"
-                                           invisible="stage in [1, 2, 3, 4]"/>
-                                    <field name="date_depot_ordre" readonly="stage != 5"
-                                           invisible="stage in [1, 2, 3, 4]"/>
-                                    <field name="date_reception_document" readonly="stage != 5"
-                                           invisible="stage in [1, 2, 3, 4]"/>
-                                </group>
-                                <group>
                                     <field name="port_embarquement"/>
                                     <field name="compagnieie_maritime"/>
                                     <field name="navire"/>
                                     <field name="n_bl"/>
                                 </group>
                             </group>
-
                         </page>
-                        <page string="Liste des facture">
+                        <page string="Liste des facture" invisible="1">
                             <field name="invoice_ids" widget="one2many_list">
                                 <tree editable="bottom">
                                     <field name="name"/>
@@ -249,14 +241,11 @@
                             </field>
 
                         </page>
-
                     </notebook>
                     <group>
                         <group>
                             <field name="facture_file"/>
-                            <field name="validation_file" readonly="stage != 1"/>
                             <field name="divers_file" readonly="stage != 3" invisible="stage in [1, 2]"/>
-                            <field name="taxe_file" readonly="stage != 2" invisible="stage in [1]"/>
                         </group>
                     </group>
                 </sheet>
